<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skinCencerPrediction.ui.CheckupHistoryDetailActivity">

    <LinearLayout
        android:id="@+id/checkup_result_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText,MissingConstraints">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/skin_image"
            android:scaleType="fitCenter"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_place_holder"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/checkup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:text="@string/date_example"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/result1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:layout_marginHorizontal="16dp"
            android:text="@string/prediction_result1" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/result"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:layout_marginHorizontal="16dp"
            android:text="@string/confidence" />

        <TextView
            android:id="@+id/confidence_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/result"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>