<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skinCencerPrediction.ui.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/skin_image"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/prediction_result1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="16dp"
            android:text="@string/result" />

        <Button
            android:id="@+id/btn_save_history"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/simpan_hasil"
            android:drawableLeft="@drawable/ic_save"
            android:layout_marginBottom="0dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</ScrollView>